# betting_software_online

./: Makefile
bet_maker/: .env  Dockerfile  alembic.ini  config.py  docker-compose.yml  entrypoint.sh  main.py  message_brocker.py  pyproject.toml
bet_maker/app/: config.py  main.py
bet_maker/app/api/: handlers_bet_maker.py  routers_bind.py
bet_maker/app/db/: custom_models.py  database.py  db.py  models.py  schemas.py  session.py
bet_maker/app/db/migrations/: env.py
bet_maker/app/db/migrations/versions/: e7133d2eb0f3_0001.py
bet_maker/app/rabbit/: queues.py  rebbit.py  utils.py
bet_maker/app/redis/: redis.py
line_provider/: .env  Dockerfile  Makefile  config.py  main.py  massage_broker.py  pyproject.toml
line_provider/app/: config.py  main.py
line_provider/app/api/: handlers_line_provider.py  routers_bind.py
line_provider/app/db/: database.py  db.py  models.py  schemas.py  session.py
line_provider/app/db/migrations/: env.py
line_provider/app/db/migrations/versions/: be7c98559065_0001.py
line_provider/app/rabbit/: queues.py  rabbit.py
line_provider/app/rebbit/: queues.py  rebbit.py
line_provider/migrations/: env.py
line_provider/migrations/versions/: be7c98559065_0001.py
line_provider/tests/: conftest.py  docker-compose-test.yml
line_provider/tests/tests_handers_line_provider/: conftest.py  test_get_events.py
message_broker/: docker-compose.yml
