[tool.poetry]
name = "Bet-maker"
version = "0.1.0"
description = "place bets on events"
authors = [ "Aleksander_Ribinskii <aleksander.ribinskii@yandex.ru>"]
package-mode = false
#repository = ""

[tool.poetry.dependencies]
python = "~3.10"
fastapi = "^0.115.12"
pydantic = "^2.11.3"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.40"
alembic = "^1.15.2"
redis = "^5.2.1"
pika = "^1.3.2"
pydantic-settings = "^2.8.1"
stringcase = "^1.2.0"
greenlet = "^3.1.1"
uvicorn = "^0.34.0"
aio-pika = "^9.5.5"
aioredis = "^2.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.4"
mypy = "^1.15.0"
pytest = "^8.2.2"
pytest-asyncio = "^0.24.0"
polyfactory = "^2.16.2"
coverage = "^7.8.0"

[tool.mypy]
mypy_path = "app"
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["app"]

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
select = ["E", "F", "I", "N", "UP", "ANN", "ASYNC", "S", "B", "A", "C4", "G", "PIE", "Q", "SIM", "ARG", "PTH", "TD", "PL", "PERF"]
ignore = ["ANN101", "PERF401"]


[tool.ruff.lint.pep8-naming]
classmethod-decorators = [
    "pydantic.root_validator",
    "pydantic.validator",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403"]
"**/{tests}/*" = ["S101"]

[tool.ruff.lint.pylint]
max-args = 9


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
